--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="section-content__first">
                                 <div class="section-content__icon">
-                                    <a href="github.com" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
-                                    <a href="github.com" class="content__icon-button">
+                                    <a href="https://github.com/jagerbomb092/login.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://form0login.netlify.app/" class="content__icon-button">
                                         <i class="fas fa-globe"></i>
                                         <p>View on Website</p>
                                     </a>
@@ -129,8 +129,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="section-content__second">
                                 <div class="section-content__icon">
-                                    <a href="github.com" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
-                                    <a href="github.com" class="content__icon-button">
+                                    <a href="https://github.com/jagerbomb092/tempate-1.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://template-boot.netlify.app/" class="content__icon-button">
                                         <i class="fas fa-globe"></i>
                                         <p>View on Website</p>
                                     </a>
@@ -149,8 +149,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="section-content__third">
                                 <div class="section-content__icon">
-                                    <a href="github.com" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
-                                    <a href="github.com" class="content__icon-button">
+                                    <a href="https://github.com/jagerbomb092/mini.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://mini-gameeee.netlify.app/" class="content__icon-button">
                                         <i class="fas fa-globe"></i>
                                         <p>View on Website</p>
                                     </a>
@@ -169,8 +169,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="section-content__four">
                                 <div class="section-content__icon">
-                                    <a href="github.com" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
-                                    <a href="github.com" class="content__icon-button">
+                                    <a href="https://github.com/jagerbomb092/template-3.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://template0boot.netlify.app/" class="content__icon-button">
                                         <i class="fas fa-globe"></i>
                                         <p>View on Website</p>
                                     </a>
@@ -188,8 +188,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="section-content__five">
                                 <div class="section-content__icon">
-                                    <a href="github.com" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
-                                    <a href="github.com" class="content__icon-button">
+                                    <a href="https://github.com/jagerbomb092/template-4.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://template-4.netlify.app/" class="content__icon-button">
                                         <i class="fas fa-globe"></i>
                                         <p>View on Website</p>
                                     </a>
@@ -208,8 +208,8 @@
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="section-content__six">
                                 <div class="section-content__icon">
-                                    <a href="github.com" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
-                                    <a href="github.com" class="content__icon-button">
+                                    <a href="https://github.com/jagerbomb092/template-teamwork.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://teamwork-template.netlify.app/" class="content__icon-button">
                                         <i class="fas fa-globe"></i>
                                         <p>View on Website</p>
                                     </a>
@@ -220,7 +220,7 @@
                                     Project name: Template PSD working with team ONCODE
                                 </p>
                                 <p class="content__title-name">
-                                    Technology in use: HTML, SASS, JS, ES6, jQuery
+                                    Technology in use: HTML, SASS, JS, ES6, jQuery, GulpJs
                                 </p>
                                 <p class="content__title-name">
                                     Other: Photoshop, Trello, Git
