--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-    
+    <div class="progress-bar">
+        <div class="body-progress"></div>
+    </div>
     <div class="fullpage">
         <!--Section1-->
         <div class="section section-1">
@@ -29,7 +31,7 @@
                         <div class="col-lg-5 col-md-12 col-sm-12" style="padding-left: 0;padding-right: 0">
                             
                             <div class="section-content__info">
-                                    <img src="asset/image/12191996_509379799227043_2437176223292409155_n.jpg" class="content__info-img">
+                                    <img src="./asset/image/12191996_509379799227043_2437176223292409155_n.jpg" class="content__info-img">
                                     <p class="content__info-name">ĐINH TUẤN NGHĨA</p>
                                     <p class="content__info-position">Front - end Developer</p>
                                     <p class="content__info-section">Phone</p>
