--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="progress-bar">
         <div class="body-progress"></div>
     </div>
+    <div class="cursor"></div>
     <div class="fullpage">
         <!--Section1-->
         <div class="section section-1">
@@ -294,7 +295,7 @@
                                     <i class="fas fa-envelope section__contact-email"></i>
                                     <p class="section__contact-content">dinhtuannghia35@gmail.com</p>
                                 </div>
-                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                <div class="col-lg-6 col-md-12 col-sm-12 row-control">
                                     <i class="fas fa-phone section__contact-phone"></i>
                                     <p class="section__contact-info">0968572928</p>
                                 </div>
