--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
                                     <li>Team work</li>
                                     <li>Time management</li>
                                 </ul>
+                                <p class="content__education-info">Experience:</p>
+                                <ul class="content__education-list">
+                                    <li>6+ Month learn front-end basic at home</li>
+                                    <li>3 month experience Intern at SSOFT Lê Văn Lương</li>
+                                </ul>
                         </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 col-control">
