--- a/index.html
+++ b/index.html
@@ -230,6 +230,45 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="section-content__seven">
+                                <div class="section-content__icon">
+                                    <a href="https://github.com/jagerbomb092/movie-page.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://movie-page-123.netlify.app/" class="content__icon-button">
+                                        <i class="fas fa-globe"></i>
+                                        <p>View on Website</p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="section-content__title">
+                                <p class="content__title-name">
+                                    Project name: Movie Page API
+                                </p>
+                                <p class="content__title-name">
+                                    Technology in use: HTML, SASS, JS
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="section-content__eight">
+                                <div class="section-content__icon">
+                                    <a href="https://github.com/jagerbomb092/search-api.git" class="content__icon-button"><i class="fab fa-github"></i><p>View on Github</p></a>
+                                    <a href="https://search-api.netlify.app/?" class="content__icon-button">
+                                        <i class="fas fa-globe"></i>
+                                        <p>View on Website</p>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="section-content__title">
+                                <p class="content__title-name">
+                                    Search Page Using API
+                                </p>
+                                <p class="content__title-name">
+                                    Technology in use: HTML, SASS, JS
+                                </p>
+                                
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
