--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 </div>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="section-content__eight">
+                <div class="section-content__nine">
                   <div class="section-content__icon">
                     <a
                       href="https://github.com/jagerbomb092/music-app"
