--- a/index.html
+++ b/index.html
@@ -379,6 +379,31 @@
                   </p>
                 </div>
               </div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="section-content__ten">
+                  <div class="section-content__icon">
+                    <a
+                      href="https://github.com/jagerbomb092/ShopApp"
+                      class="content__icon-button"
+                      ><i class="fab fa-github"></i>
+                      <p>View on Github</p></a
+                    >
+                    <a
+                      href="https://vibe-studio.netlify.app/"
+                      class="content__icon-button"
+                    >
+                      <i class="fas fa-globe"></i>
+                      <p>View on Website</p>
+                    </a>
+                  </div>
+                </div>
+                <div class="section-content__title">
+                  <p class="content__title-name">Seoul Vibe Studio</p>
+                  <p class="content__title-name">
+                    Technology in use: Reactjs, Styled component, gsap
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
